# GIC-Take-Home-Assignment

./: .dockerignore  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .env.railway.example  .env.render.example  Dockerfile  alembic.ini  docker-entrypoint.sh  openapi.json  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260327_000001_create_cafes_employees_and_assignments.py  20260329_000002_add_increment_9_indexes.py
backend/app/: main.py
backend/app/cafes/: __init__.py  command_service.py  query_service.py  repository.py  router.py  schemas.py
backend/app/core/: cache.py  config.py  database.py  error_handlers.py  exceptions.py  logging.py  readiness.py  request_context.py  resilience.py
backend/app/employees/: __init__.py  command_service.py  query_service.py  repository.py  router.py  schemas.py
backend/app/models/: __init__.py  cafe.py  employee.py  employee_assignment.py
backend/app/shared/: __init__.py  enums.py  utils.py  validators.py
backend/scripts/: __init__.py  seed.py
backend/tests/integration/: conftest.py  test_cache.py  test_cafe_writes.py  test_cafes.py  test_concurrency.py  test_employee_writes.py  test_employees.py  test_health.py  test_logging.py  test_runtime_hardening.py  test_schema.py  test_seed.py
backend/tests/unit/: test_alembic_env.py  test_cache.py  test_config.py  test_database.py  test_employee_command_service.py  test_error_handlers.py  test_metadata.py  test_resilience.py  test_utils.py  test_validators.py
frontend/: .dockerignore  (+8 more)
(+38 files in other folders)
